Lyckats ladda upp till en computerdiff directory, nästa steg är att kolla huruvida vi kan komma åt olika directories, men för att göra det insåg jag att jag vill att alla funktione i MBPMCLI ska använda samma client, så man kan konfiguera den globalt, så innan den refactorn gör jag denna commit

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,7 @@ Thumbs.db
 /MBPM_Builds/
 /CMakeLists3.txt
 /.mbpm/
+/TestMergeDirectory/
+/FileInfoWithTest
+/FileInfoWithoutTest
+/MBPM_DataToMerge
