--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,6 +106,7 @@ set(PROJECT_SOURCES
 	#"${CMAKE_CURRENT_SOURCE_DIR}/MBCLI/MBCLI.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}//MBPM_CLI.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}//MB_PacketProtocol.cpp"
+	#"${CMAKE_CURRENT_SOURCE_DIR}/MBCLI/MBCLI.cpp"
 )
 set(PROJECT_HEADERS 
 	"${CMAKE_CURRENT_SOURCE_DIR}//MBPacketManager.h"
