Början på struktur av tester, samt buggfixar och implementation av update index på virtuellt filsystem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,6 +173,12 @@ target_compile_features("mbpm" PRIVATE cxx_std_17)
 MBPM_LinkTargetPacketLibraries("mbpm")
 target_link_libraries("mbpm" ${COMMON_LIBRARIES})
 message(${CMAKE_CXX_FLAGS})
+
+add_executable("mbpm_test" ${COMMON_FILES} "MBPM_TestMain.cpp")
+MBPM_ApplyTargetConfiguration("mbpm_test" "STATIC" "DEBUG")
+target_compile_features("mbpm_test" PRIVATE cxx_std_17)
+MBPM_LinkTargetPacketLibraries("mbpm_test")
+target_link_libraries("mbpm_test" ${COMMON_LIBRARIES})
 #message("CMAKE_CXX_FLAGS_DEBUG is ${CMAKE_CXX_FLAGS_DEBUG}")
 #message("CMAKE_CXX_FLAGS_RELEASE is ${CMAKE_CXX_FLAGS_RELEASE}")
 #message("CMAKE_CXX_FLAGS_RELWITHDEBINFO is ${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")
