Main infrastructure finished for extension refactor, now to testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,10 @@ set(PROJECT_NAME "MBPacketManager")
 ##BEGIN MBPM_VARIABLES
 set(MBPM_DEPENDENCIES 
 	"MrBoboSockets"
+	"MBCLI"
 	"MBMime"
 	"MBCrypto"
-	"MBCLI"
+	"MBBenchmark"
 	"MrBigInt"
 	"MBUnicode"
 	"MBSystem"
